# DOLMIR

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
Docs/: README.md  ROADMAP.md
Docs/architecture/: DOLMIR_FOUNDATION.md
knowledge_base/: README.md
src/dolmir/: __init__.py
src/dolmir/delivery/: __init__.py
src/dolmir/delivery/cli/: __init__.py  main.py
src/dolmir/engines/: __init__.py
src/dolmir/engines/journal_engine/: README.md  __init__.py
src/dolmir/engines/knowledge_engine/: README.md  __init__.py
src/dolmir/engines/market_engine/: README.md  __init__.py
src/dolmir/engines/memory_engine/: README.md  __init__.py
src/dolmir/engines/memory_engine/adapters/: __init__.py
src/dolmir/engines/memory_engine/domain/: __init__.py
src/dolmir/engines/risk_engine/: README.md  __init__.py
src/dolmir/engines/trader_engine/: README.md  __init__.py
src/dolmir/engines/trader_engine/application/: __init__.py
src/dolmir/kernel/: __init__.py
src/dolmir/kernel/clock/: __init__.py  fixed_clock.py  port.py  system_clock.py
src/dolmir/kernel/config/: __init__.py  loader.py  settings.py
src/dolmir/kernel/event_bus/: __init__.py  in_memory_event_bus.py  integration_event.py  port.py
src/dolmir/kernel/logging/: __init__.py  setup.py
src/dolmir/kernel/plugin_system/: __init__.py  context.py  plugin.py  registry.py
src/dolmir/kernel/shared_kernel/: __init__.py  domain_event.py  entity_id.py  result.py  symbol.py  time_range.py
src/dolmir/orchestration/: README.md  __init__.py  failure.py
src/dolmir/orchestration/agents/: __init__.py  chief_decision.py  stages.py
src/dolmir/orchestration/context/: __init__.py
src/dolmir/orchestration/graph/: __init__.py  context.py  executor.py  graph.py  node.py
src/dolmir/orchestration/trace/: __init__.py  belief.py  challenge.py  conclusion.py  confidence.py  decision.py  epistemic.py  explanation.py  hypothesis.py  observation.py  opinion.py  record.py  reflection.py  repository.py  serialization.py  synthesis.py  uncertainty.py
src/dolmir/providers/: __init__.py
src/dolmir/providers/embeddings/: __init__.py
src/dolmir/providers/llm/: __init__.py
src/dolmir/providers/vision/: __init__.py
tests/contract/: README.md
tests/evals/: README.md
tests/integration/: README.md
tests/unit/delivery/: test_cli.py
tests/unit/kernel/: test_clock.py  test_config.py  test_domain_event.py  test_entity_id.py  test_event_bus.py  test_plugin_registry.py  test_result.py  test_symbol.py  test_time_range.py
tests/unit/orchestration/: conftest.py  test_belief_worldmodel.py  test_chief_decision.py  test_confidence.py  test_epistemic.py  test_full_cognitive_pipeline.py  test_full_reasoning_run.py  test_graph_assembly.py  test_graph_context.py  test_graph_executor.py  test_hypothesis.py  test_observation_interpretation.py  test_opinion_and_challenge.py  test_reflection_learning.py  test_serialization.py  test_trace_record.py  test_uncertainty_risk_decision.py
